--- a/3 - Minigame/style.css
+++ b/3 - Minigame/style.css
@@ -1,3 +1,10 @@
+/*
+============================================================================================
+AUTHOR      : Josh Ratificar, Ben Cesar Cadungog
+UPDATED ON  : 23 January 2023
+============================================================================================
+*/
+
 @keyframes spin {
   from {
     transform: rotate(0deg);
