--- a/3 - Minigame/style.css
+++ b/3 - Minigame/style.css
@@ -4,7 +4,6 @@ AUTHOR      : Josh Ratificar, Ben Cesar Cadungog
 UPDATED ON  : 23 January 2023
 ============================================================================================
 */
-
 @keyframes spin {
   from {
     transform: rotate(0deg);
@@ -24,6 +23,9 @@ UPDATED ON  : 23 January 2023
 }
 
 body{
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
   background-color: #000;
   display: flex;
   align-items: center;
@@ -33,6 +35,9 @@ body{
 }
 
 .universe {
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -56,6 +61,9 @@ body{
 }
 
 .health-bar {
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -70,6 +78,9 @@ body{
 }
 
 .health-value { 
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
   position: relative;
   top: 10px;
   right: 10px;
@@ -97,6 +108,9 @@ body{
 }
 
 .game-over-menu {
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
   font-family: cursive;
   color: rgb(254, 254, 254);
   font-family:Verdana, Geneva, Tahoma, sans-serif;
@@ -131,6 +145,9 @@ body{
   color: rgb(254, 254, 254);
 }
 .round {
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
   position: absolute;
   font-weight: 500;
   top: -70px;
@@ -146,6 +163,9 @@ body{
 }
 
 .playBtn {
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   display: flex;
   align-items: center;
@@ -172,6 +192,9 @@ body{
 }
 
 .object {
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -180,7 +203,7 @@ body{
 }
 
 .object img {
-
+  pointer-events: none;
   width: 100px;
   height: 100px;
 }
